...
    String currencyCode = _defaultCurrency;
    final ok = await showDialog<bool>(
      context: context,
      builder: (_) => StatefulBuilder(
        builder: (context, setInnerState) {
          return AppAlertDialog(
            title: const Text('Add Account'),
            content: Column(
              mainAxisSize: MainAxisSize.min,
              children: [
                TextField(
                    controller: name,
                    decoration: const InputDecoration(labelText: 'Name')),
...
    String currencyCode =
        (account['currency_code'] ?? _defaultCurrency).toString();
    final ok = await showDialog<bool>(
      context: context,
      builder: (_) => StatefulBuilder(
        builder: (context, setInnerState) => AppAlertDialog(
          title: const Text('Edit Account'),
          content: SingleChildScrollView(
            child: Column(
              mainAxisSize: MainAxisSize.min,
              children: [
                TextField(
                  controller: name,
...
    try {
      final result = await showDialog<bool>(
        context: context,
        builder: (dialogContext) => StatefulBuilder(
          builder: (context, setInnerState) {
            return AppAlertDialog(
              title: const Text('Delete account'),
              content: SingleChildScrollView(
                child: Column(
                  crossAxisAlignment: CrossAxisAlignment.stretch,
                  mainAxisSize: MainAxisSize.min,
                  children: [
                    Text(
...
      orElse: () => fromCurrency,
    );
    final ok = await showDialog<bool>(
      context: context,
      builder: (_) => StatefulBuilder(
        builder: (context, setInnerState) => AppAlertDialog(
          title: const Text('Exchange Account Currency'),
          content: Column(
            mainAxisSize: MainAxisSize.min,
            children: [
              Text('From: $fromCurrency'),
              const SizedBox(height: 8),
              DropdownButtonFormField<String>(
...
              leading: const Icon(Icons.edit_outlined),
              title: const Text('Edit account'),
              onTap: () => Navigator.pop(context, 'edit'),
            ),
            ListTile(
              leading: const Icon(Icons.currency_exchange_outlined),
              title: const Text('Exchange currency'),
              onTap: () => Navigator.pop(context, 'exchange'),
            ),
            ListTile(
              leading: const Icon(Icons.delete_outline_rounded),
              title: const Text('Delete account'),
              onTap: () => Navigator.pop(context, 'delete'),
...
